Fix instructions overlapping settings

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -83,7 +83,7 @@ html, body
     left: 0
     top: 15%
     width: 20%
-    height: 80%
+    height: 60%
     padding: 16px
     line-height: 1em
 
